# vulkan-guide

./: .gitattributes  .gitignore  .travis.yml  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CNAME  LICENSE  LICENSE.txt  README.md  Shaders.vcxproj  VkBootstrap.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  _config.yml  cmake_install.cmake  comments.html  index.md  type-on-strap.gemspec  vcpkg.json  vulkan-guide-2.7z  vulkan_guide - Copy.cpp.copy  vulkan_guide - Copy.cpp.copy2  vulkan_guide.cpp  vulkan_guide.h  vulkan_guide.sln
.github/workflows/: cmake.yml
_includes/: disqus.html  footer.html  head.html  icons.html  nav.html  navbar.html  portfolio.html  post_nav.html  tags_list.html
_layouts/: bootstrap.html  default.html  feed.xml  home.html  page.html  post.html  search.html  tags.html
_portfolio/: dinogame.md  dwvr.md  engine.md  heavygear.md  terrorgame.md  vrmultigames.md
_posts/: 2018-03-25-post-ue4-ecs-battle.md  2018-06-11-post-ecs-battle-huge.md  2020-06-08-post-libraries.md
_sass/: code.scss  type-on-strap.scss
_sass/base/: _global.scss  _utility.scss  _variables.scss
_sass/includes/: _footer.scss  _navbar.scss  _post_nav.scss
_sass/layouts/: _index.scss  _page.scss  _portfolio.scss  _posts.scss  _search.scss  _tags.scss
asset-baker/: CMakeLists.txt  asset_main.cpp
assetlib/: CMakeLists.txt  asset_loader.cpp  asset_loader.h  material_asset.cpp  material_asset.h  mesh_asset.cpp  mesh_asset.h  prefab_asset.cpp  prefab_asset.h  texture_asset.cpp  texture_asset.h
assets/: basicmesh.glb  house.glb  lost_empire-Alpha.tx  lost_empire-RGB.tx  lost_empire-RGBA.tx  monkey.glb  monkey2.glb  monkey_flat.mesh  monkey_smooth.mesh
assets/FlightHelmet/: FlightHelmet.pfb  FlightHelmet_Materials_GlassPlasticMat_BaseColor.tx  FlightHelmet_Materials_LensesMat_BaseColor.tx  FlightHelmet_Materials_LensesMat_Normal.tx  FlightHelmet_Materials_LensesMat_OcclusionRoughMetal.tx  FlightHelmet_Materials_MetalPartsMat_BaseColor.tx  GlassPlasticMat.mat  HoseMat.mat  LeatherPartsMat.mat  LensesMat.mat  MetalPartsMat.mat
assets/css/: bootstrap-iso.min.css  font-awesome.min.css  katex.min.css  main.scss
assets/js/: bootstrap.min.js  jquery-3.2.1.min.js  just-the-docs.js  katex_init.js  main.min.js  navbar.js
chapter-0/: CMakeLists.txt  main.cpp  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_types.h
chapter-1/: CMakeLists.txt  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h
chapter-2/: CMakeLists.txt  vk_engine.cpp  vk_engine.h  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_types.h
chapter-3/: CMakeLists.txt  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_mesh.cpp  vk_mesh.h  vk_types.h
chapter-3-scene/: CMakeLists.txt  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp
chapter-4/: CMakeLists.txt  camera.cpp  camera.h  main.cpp  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_mesh.cpp  vk_mesh.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
chapter-5/: CMakeLists.txt  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_mesh.cpp  vk_textures.cpp  vk_textures.h
chapter-6/: CMakeLists.txt  vk_engine.cpp  vk_engine.h  vk_loader.cpp  vk_loader.h
diagrams/: GPU Timeline.drawio  assetarchitecture.drawio  descriptors.drawio  indirectarch.drawio  test.drawio  vkcommands.drawio  vkcommandsync.drawio
docs/: great_resources.md  old_vkguide.md  project_libs.md  test.md  vkguide_2.md
docs/ascendant/: ascendant.md  ascendant_geometry.md  ascendant_light.md  ascendant_overview.md  from_tutorial_to_engine.md
docs/chapter-0/: building_project.md  chapter-0.md  code_walkthrough.md
docs/chapter-1/: chapter-1.md  vulkan_command_flow.md  vulkan_commands_code.md  vulkan_init_code.md  vulkan_init_flow.md  vulkan_mainloop.md  vulkan_mainloop_code.md  (+2 more)
extra-engine/: CMakeLists.txt  cvars.cpp  cvars.h  frustum_cull.h  logger.h  material_system.cpp  material_system.h  player_camera.cpp  player_camera.h  string_utils.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_engine_scenerender.cpp  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_profiler.cpp  vk_profiler.h  vk_pushbuffer.cpp  vk_pushbuffer.h  vk_scene.cpp  vk_scene.h  vk_shaders.cpp  vk_shaders.h  vk_textures.cpp  vk_textures.h  vk_types.h
ko/: index-ko.md  index.md
meshbaker/: CMakeLists.txt  main.cpp
pages/: 404.md  about.md  portfolio.html  search.html  tags.html
shaders/: blit.frag  blit.frag.spv  colored_triangle.frag  colored_triangle.frag.spv  colored_triangle.vert  colored_triangle.vert.spv  colored_triangle_mesh.vert  colored_triangle_mesh.vert.spv  default_lit.frag  default_lit.frag.spv  depthReduce.comp.spv  fullscreen.vert  fullscreen.vert.spv  funky_triangle.frag  funky_triangle.frag.spv  gradient.comp  gradient.comp.spv  gradient_color.comp  gradient_color.comp.spv  hellogpu.comp  hellogpu.comp.spv  indirect_cull.comp  indirect_cull.comp.spv  input_structures.glsl  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  mesh_pbr.frag  mesh_pbr.frag.spv  mesh_textured.frag.spv  pbr_header.glsl  scene_data.glsl  sky.comp  sky.comp.spv  sparse_upload.comp  sparse_upload.comp.spv  tex_image.frag  tex_image.frag.spv  textured_lit.frag  (+17 more)
shared/: CMakeLists.txt  camera.cpp  camera.h  meshes.cpp  meshes.h  vk_descriptors.cpp  vk_descriptors.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
src/: CMakeLists.txt  camera.cpp  camera.h  cmake_install.cmake  main.cpp  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_pipelines.cpp  vk_pipelines.h  vk_types.h  vulkan_guide.vcxproj  vulkan_guide.vcxproj.filters
vkguide_new_source/: vkguide_2.md
(+309 files in other folders)
